# challenge-data-pipeline

./: .bumpversion.cfg  .coveragerc  .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml
airflow/: default_connection.json
airflow/dags/transient_to_raw/: dags.py
airflow/dags/twitter_to_transient/: dag.py
airflow/dags/twitter_to_transient/etls/: save_in_transient.py
airflow/plugins/: airflow_plugin.py
airflow/plugins/hooks/: twitter_hook.py
changelog.d/: 6dbf3a5b.automation  8CFA76B1.feature  8CFA76B2.feature
dags/: transient_to_raw.py  twitter_to_transient.py
docker/airflow/: Dockerfile  requirements.txt
docker/jupyter/: Dockerfile
docker/spark/: Dockerfile
make-lib/: checks.mk  environment.mk  integrations.mk  tests.mk  utils.mk  versioning.mk
pipeline_twitter/: conftest.py
pipeline_twitter/etls/: save_in_raw.py  save_in_transient.py
pipeline_twitter/hooks/: s3_hook.py
pipeline_twitter/hooks/_tests/: test_hooks_s3_hook.py  test_hooks_twitter_hook.py
src/: .dockerignore  .env.example  Dockerfile  Makefile  requirements.txt
src/pipeline_twitter/: conftest.py
src/pipeline_twitter/etls/: save_in_raw.py
src/pipeline_twitter/hooks/: s3_hook.py
src_pipeline/: Dockerfile  Makefile
src_pipeline/pipeline_twitter/etls/: insight_tweet.py  save_in_raw.py  save_in_transient.py
src_pipeline/pipeline_twitter/hooks/_tests/: test_hooks_s3_hook.py
srcs/pipeline/: .coveragerc  Dockerfile  Makefile  pyproject.toml  pytest.ini
srcs/pipeline/pipeline_twitter/etls/_tests/: test_etls_save_in_transient.py
srcs/pipeline/pipeline_twitter/hooks/: twitter_hook.py
srcs/spark-submit/: Dockerfile  Makefile
srcs/spark-submit/submit/: log4j.properties  main.py  submit.sh
terraform/: base_resources.tf  main.tf  project_resources.tf  variables.tf
terraform/manifests/airflow/: values.yaml
terraform/manifests/airflow/docker/: Dockerfile
terraform/manifests/k8s/: cert-manager.crds.yaml  rbac.yaml
terraform/manifests/kafka/: values.yaml
terraform/manifests/kind_cluster/: config.yaml
terraform/manifests/minio/: values.yaml
terraform/manifests/mongodb/: values.yaml
