[tool.isort]
    case_sensitive= '1'
    use_parentheses = '1'
    line_length = '79'
    order_by_type = '1'
    multi_line_output = '3'
    include_trailing_comma = '1'
    lines_after_imports = '2'
    atomic = '1'

[tool.black]
    exclude = '''
        \.pyi
    '''
    target-version = ['py38']
    line-length = '79'
    skip-string-normalization = '1'

[tool.towncrier]
    package = 'challenge-data-pipeline'
    package_dir = ''
    filename = 'CHANGELOG.md'
    title_format =  '{version} ({project_date})'
    directory = 'changelog.d'
    template = 'towncrier_template.rst'

    [[tool.towncrier.type]]
        directory = 'feature'
        name = 'Features'
        showcontent = true

    [[tool.towncrier.type]]
        directory = 'bugfix'
        name = 'Bugfixes'
        showcontent = true

    [[tool.towncrier.type]]
        directory = 'doc'
        name = 'Improved Documentation'
        showcontent = true

    [[tool.towncrier.type]]
        directory = 'removal'
        name = 'Deprecations and Removals'
        showcontent = true

    [[tool.towncrier.type]]
        directory = 'misc'
        name = 'Misc'
        showcontent = true

    [[tool.towncrier.type]]
        directory = 'health'
        name = 'Health'
        showcontent = true

    [[tool.towncrier.type]]
        directory = 'refactor'
        name = 'Refactoring'
        showcontent = true

    [[tool.towncrier.type]]
        directory = 'improve'
        name = 'Improvement'
        showcontent = true

    [[tool.towncrier.type]]
        directory = 'automation'
        name = 'Automation'
        showcontent = true

[tool.poetry]
name = "pipeline-twitter"
version = "0.1.0"
description = ""
authors = ["Cesar Augusto <cesarabruschetta@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9.1"
requests = "^2.26.0"
boto3 = "^1.21.21"
pyspark = "^3.2.1"

[tool.poetry.dev-dependencies]
isort = "^5.6.4"
bumpversion = "^0.6.0"
black = "^20.8b1"
flake8 = "^3.8.4"
towncrier = "^19.2.0"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
pylint = "^2.8.3"
mypy = "^0.790"
types-requests = "^2.27.12"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
